--- a/playbooks/gce/os3-master/terminate.yml
+++ b/playbooks/gce/os3-master/terminate.yml
@@ -2,17 +2,38 @@
   hosts: localhost
   gather_facts: no
   tasks:
-  - name: Evaluate oo_host_group_exp if it's set
-    add_host: "name={{ item }} groups=oo_hosts_to_terminate"
-    with_items: "{{ oo_host_group_exp | default('') }}"
-    when: oo_host_group_exp is defined
+    - debug: var=oo_host_group_exp
 
-- name: "Terminate instances"
+    - name: Evaluate oo_host_group_exp if it's set
+      add_host: "name={{ item }} groups=oo_hosts_to_terminate"
+      with_items: "{{ oo_host_group_exp | default('') }}"
+      when: oo_host_group_exp is defined
+
+    - debug: msg="{{ groups['oo_hosts_to_terminate'] }}"
+
+
+- name: Terminate instances
   hosts: localhost
   connection: local
   tasks:
     - name: Terminate master instances
-      local_action:
-        module: gce
+      gce:
+        service_account_email: "{{ gce_service_account_email }}"
+        pem_file: "{{ gce_pem_file }}"
+        project_id: "{{ gce_project_id }}"
         state: 'absent'
-        instance_names: "{{ oo_hosts_to_terminate }}"
+        instance_names: "{{ groups['oo_hosts_to_terminate'] }}"
+        disks: "{{ groups['oo_hosts_to_terminate'] }}"
+      register: gce
+    
+    - debug: var=gce
+
+#    - name: Remove disks of instances
+#      gce_pd:
+#        service_account_email: "{{ gce_service_account_email }}"
+#        pem_file: "{{ gce_pem_file }}"
+#        project_id: "{{ gce_project_id }}"
+#        name: "{{ item }}"
+#        state: deleted
+#      with_items: gce.instance_names
+
