--- a/playbooks/gce/origin-minion/terminate.yml
+++ b/playbooks/gce/origin-minion/terminate.yml
@@ -11,11 +11,12 @@
 
     - debug: msg="{{ groups['oo_hosts_to_terminate'] }}"
 
+
 - name: Terminate instances
   hosts: localhost
   connection: local
   tasks:
-    - name: Terminate master instances
+    - name: Terminate minion instances
       gce:
         service_account_email: "{{ gce_service_account_email }}"
         pem_file: "{{ gce_pem_file }}"
@@ -27,12 +28,12 @@
 
     - debug: var=gce
 
-    - name: Remove disks of instances
-      gce_pd:
-        service_account_email: "{{ gce_service_account_email }}"
-        pem_file: "{{ gce_pem_file }}"
-        project_id: "{{ gce_project_id }}"
-        name: "{{ item }}"
-        zone: "{{ gce.zone }}"
-        state: absent
-      with_items: gce.instance_names
+#    - name: Remove disks of instances
+#      gce_pd:
+#        service_account_email: "{{ gce_service_account_email }}"
+#        pem_file: "{{ gce_pem_file }}"
+#        project_id: "{{ gce_project_id }}"
+#        name: "{{ item }}"
+#        state: deleted
+#      with_items: gce.instance_names
+
