--- a/playbooks/gce/origin-minion/terminate.yml
+++ b/playbooks/gce/origin-minion/terminate.yml
@@ -28,12 +28,14 @@
 
     - debug: var=gce
 
-#    - name: Remove disks of instances
-#      gce_pd:
-#        service_account_email: "{{ gce_service_account_email }}"
-#        pem_file: "{{ gce_pem_file }}"
-#        project_id: "{{ gce_project_id }}"
-#        name: "{{ item }}"
-#        state: deleted
-#      with_items: gce.instance_names
+    - name: Remove disks of instances
+      gce_pd:
+        service_account_email: "{{ gce_service_account_email }}"
+        pem_file: "{{ gce_pem_file }}"
+        project_id: "{{ gce_project_id }}"
+        name: "{{ item }}"
+        zone: "{{ gce.zone }}"
+        state: absent
+      with_items: gce.instance_names
+
 
