WIP Infra - Use variables in roles

--- a/playbooks/gce/openshift-minion/config.yml
+++ b/playbooks/gce/openshift-minion/config.yml
@@ -35,5 +35,6 @@
     - ../../../roles/docker
     - {
         role: ../../../roles/openshift_minion,
-        oo_master_ips: "{{ hostvars['localhost'].oo_master_ips | default(['']) }}"
+        oo_master_ips: "{{ hostvars['localhost'].oo_master_ips | default(['']) }}",
+        oo_bind_ip: "{{ hostvars[inventory_hostname].ansible_eth0.ipv4.address | default(['']) }}"
       }
