--- a/playbooks/gce/openshift-master/config.yml
+++ b/playbooks/gce/openshift-master/config.yml
@@ -34,6 +34,7 @@
     - ../../../roles/repos
     - {
         role: ../../../roles/openshift_master,
-        oo_minion_ips: "{{ hostvars['localhost'].oo_minion_ips | default(['']) }}"
+        oo_minion_ips: "{{ hostvars['localhost'].oo_minion_ips | default(['']) }}",
+        oo_bind_ip: "{{ hostvars[inventory_hostname].ansible_eth0.ipv4.address | default(['']) }}"
       }
     - ../../../roles/pods
