--- a/roles/openshift_master/tasks/main.yml
+++ b/roles/openshift_master/tasks/main.yml
@@ -3,14 +3,17 @@
 - name: Install Origin
   yum: pkg=origin state=installed
 
-- name: Configure Origin settings
+- name: Set hostname to IP Addr
+  command: /usr/bin/hostname {{ oo_bind_ip }}
+
+- name: Configure OpenShift Master settings
   lineinfile: >
     dest=/etc/sysconfig/openshift
     regexp={{ item.regex }}
     line="{{ item.line }}"
   with_items:
-    - { regex: '^OPENSHIFT_MASTER',  line: 'OPENSHIFT_MASTER=\"{{ oo_bind_ip }}\"' }
-    - { regex: '^OPENSHIFT_BIND_ADDR', line: 'OPENSHIFT_BIND_ADDR=\"{{ oo_bind_ip }}\"'}
+    - { regex: '^ROLE=', line: 'ROLE=\"master\"' }
+    - { regex: '^OPTIONS=', line: 'OPTIONS=\"--nodes={{ oo_minion_ips | join(",") }}  --loglevel=5\"' }
   notify:
     - restart openshift-master
 
