--- a/roles/docker_img_monitoring/tasks/main.yml
+++ b/roles/docker_img_monitoring/tasks/main.yml
@@ -7,4 +7,8 @@
   with_items:
     - { name: 'Dockerfile',              mode: '644' }
     - { name: 'register-with-zabbix.rb', mode: '755' }
+
+- name: deploy monitoring image build templates
+  template: "src=monitoring_container/{{ item.name }}.j2 dest=/usr/local/etc/containers/monitoring_container/{{ item.name }} mode={{ item.mode }}"
+  with_items:
     - { name: 'start.rb',                mode: '755' }
