Add an "overlay network" for the inter-POD communication
It is built thanks to Open vSwitch and VxLAN.

The network topology is statically built and is described in
https://github.com/GoogleCloudPlatform/kubernetes/blob/master/docs/ovs-networking.md
except that each node gets a 192.168.x.0/24 subnet where x is the node index.

--- a/roles/repos/tasks/main.yaml
+++ b/roles/repos/tasks/main.yaml
@@ -22,3 +22,6 @@
 
 - name: Ensure the origin repo is available
   copy: src=epel7-origin.repo dest=/etc/yum.repos.d/epel7-origin.repo
+
+- name: Ensure the OpenStack repo is available
+  yum: name=https://repos.fedorapeople.org/repos/openstack/openstack-juno/rdo-release-juno-1.noarch.rpm state=present
