--- a/playbooks/aws/openshift-minion/config.yml
+++ b/playbooks/aws/openshift-minion/config.yml
@@ -34,6 +34,10 @@
   roles:
     - ../../../roles/base_os
     - ../../../roles/repos
+    - {
+        role: ../../../roles/overlay_network,
+        oo_bind_ip: "{{ hostvars[inventory_hostname].ansible_eth0.ipv4.address | default(['']) }}"
+      }
     - ../../../roles/docker
     - {
         role: ../../../roles/openshift_minion,
