--- a/playbooks/aws/openshift-minion/launch.yml
+++ b/playbooks/aws/openshift-minion/launch.yml
@@ -25,7 +25,7 @@
         user_data: "{{ lookup('file', user_data_file) }}"
         wait: yes
       register: ec2
-
+    
     - name: Add new instances public IPs to the atomic proxy host group
       add_host: "hostname={{ item.public_ip }} groupname=new_ec2_instances"
       with_items: ec2.instances
@@ -51,6 +51,12 @@
         - oo_new_inst_names
         - ec2.instances
 
+    - name: Add new instances public IPs to oo_hosts_to_config_by_index
+      add_host: "name={{ item.0 }} oo_minion_index={{ item.1 }} groupname=oo_hosts_to_config_by_index"
+      with_together:
+        - oo_new_inst_names
+        - oo_indexes
+
     - debug: var=ec2
 
     - name: Wait for ssh
@@ -64,3 +70,15 @@
       retries: 20
       delay: 10
       with_items: ec2.instances
+    
+- name: "Configure instances"
+  hosts: oo_hosts_to_config
+  connection: ssh
+  accelerate: false
+  user: root
+  vars_files:
+    - vars.yml
+  roles:
+    - { role: ../../../roles/local_facts, oo_minion_creation_index: "{{ oo_minion_index }}" }
+
+
