--- a/roles/repos/tasks/main.yaml
+++ b/roles/repos/tasks/main.yaml
@@ -13,6 +13,7 @@
 
 - name: Ensure rhel 7 libra candidate exists in yum.repos.d
   copy: src=rhel-7-libra-candidate.repo dest=/etc/yum.repos.d/rhel-7-libra-candidate.repo
+  when: oo_openshift_binary is not defined
 
 - name: Ensure a docker repo is laid down
   copy: src=docker.repo dest=/etc/yum.repos.d/docker.repo
