Fix VxLAN creation
When we create the VxLAN links between minions, we have to loop over all the minions
and to skip ourself. A minion doesn’t need a link to itself.

The "groups['tag_env-host-type_' + oo_env + '-openshift-minion']" over which we iterate contains the public IPs.
So, we have to use facter_ec2_public_ipv4 to get the public IP of the current minion when doing the filtering.

--- a/playbooks/aws/openshift-minion/config.yml
+++ b/playbooks/aws/openshift-minion/config.yml
@@ -41,7 +41,7 @@
     - ../../../roles/repos
     - {
        role: ../../../roles/overlay_network,
-       oo_bind_ip: "{{ hostvars[inventory_hostname].ansible_eth0.ipv4.address | default(['']) }}"
+       oo_public_ip: "{{ hostvars[inventory_hostname].facter_ec2_public_ipv4 | default(['']) }}"
       }
     - ../../../roles/docker
     - {
