Use ~/.awscred instead of ~/aws-credentials

--- a/config
+++ b/config
@@ -23,7 +23,7 @@
 # AWS_ACCESS_KEY_ID
 # AWS_SECRET_ACCESS_KEY
 
-#source ~/aws-credentials
+#source ~/.awscred
 #export AWS_ACCESS_KEY_ID
 #export AWS_SECRET_ACCESS_KEY
 
