Create a config.sample file
This file can be used as a base to create a personal config file.
config.sample is committed and is not meant to be modified by users.
config is created and modified by users, but is not committed in git.

--- a/config.sample
+++ b/config.sample
@@ -10,6 +10,20 @@
 
 #export OO_PROVIDER=aws
 
+# MASTERS
+#
+# Number of master nodes
+# Default: 1
+
+#export MASTERS=1
+
+# MINIONS
+#
+# Number of minion nodes
+# Default: 2
+
+#export MINIONS=2
+
 ################
 # GCE settings #
 ################
