Fixes for PR #46

--- a/roles/openshift_master/tasks/openshift_from_local.yml
+++ b/roles/openshift_master/tasks/openshift_from_local.yml
@@ -1,6 +1,6 @@
 - name: Copy OpenShift binary
   copy:
-    src: openshift
+    src: '{{ oo_openshift_binary }}'
     dest: /usr/local/bin/openshift
     mode: 0755
 
