--- a/playbooks/aws/openshift-minion/config.yml
+++ b/playbooks/aws/openshift-minion/config.yml
@@ -29,6 +29,7 @@
   user: root
   vars_files:
     - vars.yml
+  tags: config
   tasks:
   - name: re-read facts after adding custom fact
     setup: filter=ansible_local
