Assign an index to minions for container subnet
Each machine hosting a minion has two local ansible facts:

* subnet_index which must be different between each machine. It is assigned at
               creation (setup from launch.yml)

* nb_minions   keeps the current number of minions in the cluster
               It is used when spawning new minions on an existing cluster
               to guarantee that the new machines will get unused indices.

--- a/roles/openshift_minion/tasks/main.yml
+++ b/roles/openshift_minion/tasks/main.yml
@@ -5,6 +5,12 @@
 - name: Set hostname to IP Addr (WORKAROUND)
   hostname: name={{ oo_bind_ip }}
 
+- name: Update the nb_minons local fact on all the minions
+  lineinfile:
+    dest: /etc/ansible/facts.d/minion.fact
+    regexp: '^nb_minions'
+    line: "nb_minions={{ ( 'tag_env-host-type_' + oo_env + '-openshift-minion' ) | oo_max_nb_minions( groups, hostvars ) }}"
+
 - include: openshift_from_yum.yml
   when: oo_openshift_binary is not defined
 
