--- a/playbooks/aws/openshift-minion/launch.yml
+++ b/playbooks/aws/openshift-minion/launch.yml
@@ -45,15 +45,15 @@
         tags: "{{ oo_new_inst_tags }}"
 
     - name: Add new instances public IPs to oo_hosts_to_config
-      add_host: "hostname={{ item.0 }} ansible_ssh_host={{ item.1.dns_name }} groupname=oo_hosts_to_config"
+      add_host:
+        hostname: "{{ item.0 }}"
+        ansible_ssh_host: "{{ item.1.dns_name }}"
+        oo_minion_index: "{{ item.2 }}"
+        oo_nb_new_inst: "{{ oo_new_inst_names | count }}"
+        groupname: oo_hosts_to_config
       with_together:
         - oo_new_inst_names
         - ec2.instances
-
-    - name: Add new instances public IPs to oo_hosts_to_config_by_index
-      add_host: "name={{ item.0 }} oo_minion_index={{ item.1 }} groupname=oo_hosts_to_config_by_index"
-      with_together:
-        - oo_new_inst_names
         - oo_indexes
 
     - debug: var=ec2
@@ -70,6 +70,14 @@
       delay: 10
       with_items: ec2.instances
 
+- name: "Force fact gathering"
+  hosts: "tag_env-host-type_{{ oo_env }}-openshift-minion"
+  connection: ssh
+  user: root
+  tasks:
+    - name: Gather fact
+      setup: filter=ansible_local
+
 - name: "Configure instances"
   hosts: oo_hosts_to_config
   connection: ssh
@@ -77,7 +85,10 @@
   vars_files:
     - vars.yml
   roles:
-    - { role: ../../../roles/local_facts, oo_minion_creation_index: "{{ oo_minion_index }}" }
+    - { role: ../../../roles/minion_indices,
+        oo_minion_subnet_index: "{{ ( oo_minion_index | int ) + ( ( 'tag_env-host-type_' + oo_env + '-openshift-minion' ) | oo_max_nb_minions( groups, hostvars ) ) }}",
+        oo_nb_minions:          "{{ ( oo_nb_new_inst  | int ) + ( ( 'tag_env-host-type_' + oo_env + '-openshift-minion' ) | oo_max_nb_minions( groups, hostvars ) ) }}"
+        }
 
 # Apply the configs, seprate so that just the configs can be run by themselves
 - include: config.yml
