--- a/roles/base_os/tasks/main.yaml
+++ b/roles/base_os/tasks/main.yaml
@@ -2,25 +2,30 @@
 # basic role, configures irbrc, vimrc
 
 - name: Ensure irbrc is installed for user root
-  copy: >
-    src=irbrc
-    dest=/root/.irbrc
+  copy:
+    src: irbrc
+    dest: /root/.irbrc
 
 - name: Ensure vimrc is installed for user root
-  copy: >
-    src=vimrc
-    dest=/root/.vimrc
+  copy:
+    src: vimrc
+    dest: /root/.vimrc
 
 - name: Ensure vimrc is installed for user root
-  copy: >
-    src=vimrc
-    dest=/root/.vimrc
+  copy:
+    src: vimrc
+    dest: /root/.vimrc
 
 - name: Install firewalld
-  yum: pkg=firewalld state=installed
+  yum:
+    pkg: firewalld
+    state: installed
 
 - name: enable firewalld service
   command: /usr/bin/systemctl enable firewalld.service
 
 - name: start firewalld service
   command: /usr/bin/systemctl start firewalld.service
+
+- name: need to pause here, otherwise the firewalld service starting can sometimes cause ssh to fail
+  pause: seconds=10
