--- a/roles/kubernetes_proxy/tasks/main.yml
+++ b/roles/kubernetes_proxy/tasks/main.yml
@@ -4,10 +4,10 @@
   yum: pkg=kubernetes state=installed
 
 - name: Configure kubernetes-proxy etcd servers
-  lineinfile: >
-    dest=/etc/sysconfig/kubernetes
-    regexp={{ item.regex }}
-    line="{{ item.line }}"
+  lineinfile:
+    dest: /etc/sysconfig/kubernetes
+    regexp: "{{ item.regex }}"
+    line: "{{ item.line }}"
   with_items:
     - { regex: '^KUBE_ETCD_SERVERS=', line: 'KUBE_ETCD_SERVERS=\"http://{{ oo_master_ips[0] }}:4001\"' }
   notify:
