--- a/playbooks/gce/openshift-node/config.yml
+++ b/playbooks/gce/openshift-node/config.yml
@@ -22,6 +22,19 @@
             | oo_select_keys(groups['tag_env-host-type-' + oo_env + '-openshift-master'])
             | oo_collect(attribute='ansible_eth0.ipv4.address') }}"
       when: groups['tag_env-host-type-' + oo_env + '-openshift-master'] is defined
+    - name: Setting oo_master_public_ips fact on localhost
+      set_fact:
+        oo_master_public_ips: "{{ hostvars
+            | oo_select_keys(groups['tag_env-host-type-' + oo_env + '-openshift-master'])
+            | oo_collect(attribute='gce_public_ip') }}"
+      when: groups['tag_env-host-type-' + oo_env + '-openshift-master'] is defined
+
+- name: "Debug hostvars"
+  hosts: oo_hosts_to_config
+  connection: ssh
+  user: root
+  tasks:
+    - debug: var=hostvars
 
 - name: "Configure instances"
   hosts: oo_hosts_to_config
@@ -34,7 +47,9 @@
     - ../../../roles/repos
     - ../../../roles/docker
     - {
-        role: ../../../roles/openshift_minion,
+        role: ../../../roles/openshift_node,
         oo_master_ips: "{{ hostvars['localhost'].oo_master_ips | default(['']) }}",
-        oo_bind_ip: "{{ hostvars[inventory_hostname].ansible_eth0.ipv4.address | default(['']) }}"
+        oo_master_public_ips: "{{ hostvars['localhost'].oo_master_public_ips | default(['']) }}",
+        oo_bind_ip: "{{ hostvars[inventory_hostname].ansible_eth0.ipv4.address | default(['']) }}",
+        oo_public_ip: "{{ hostvars[inventory_hostname].ansible_ssh_host }}"
       }
