more ansible tower commits

--- a/playbooks/aws/ansible-tower/config.yml
+++ b/playbooks/aws/ansible-tower/config.yml
@@ -16,5 +16,6 @@
     - vars.yml
     - "vars.{{ oo_env }}.yml"
   roles:
-    - ../../../roles/atomic_base
-    - ../../../roles/atomic_proxy
+    - ../../../roles/base_os
+    - ../../../roles/ipv6_disable
+    - ../../../roles/ansible_install
