--- a/playbooks/gce/openshift-node/config.yml
+++ b/playbooks/gce/openshift-node/config.yml
@@ -1,6 +1,7 @@
 - name: "populate oo_hosts_to_config host group if needed"
   hosts: localhost
   gather_facts: no
+
   tasks:
   - name: Evaluate oo_host_group_exp
     add_host: "name={{ item }} groups=oo_hosts_to_config"
@@ -29,17 +30,14 @@
             | oo_collect(attribute='gce_public_ip') }}"
       when: groups['tag_env-host-type-' + oo_env + '-openshift-master'] is defined
 
-- name: "Debug hostvars"
-  hosts: oo_hosts_to_config
-  connection: ssh
-  user: root
-  tasks:
-    - debug: var=hostvars
-
 - name: "Configure instances"
   hosts: oo_hosts_to_config
   connection: ssh
   user: root
+
+  vars:
+    tmp_dir: "/tmp/openshift-{{ 9999 | random }}"
+
   vars_files:
     - vars.yml
   roles:
@@ -51,5 +49,6 @@
         oo_master_ips: "{{ hostvars['localhost'].oo_master_ips | default(['']) }}",
         oo_master_public_ips: "{{ hostvars['localhost'].oo_master_public_ips | default(['']) }}",
         oo_bind_ip: "{{ hostvars[inventory_hostname].ansible_eth0.ipv4.address | default(['']) }}",
-        oo_public_ip: "{{ hostvars[inventory_hostname].ansible_ssh_host }}"
+        oo_public_ip: "{{ hostvars[inventory_hostname].ansible_ssh_host }}",
+        tmp_dir: "{{ tmp_dir }}"
       }
