remove the add-hoc docker repo
Fix up libra candidate repo config file

Fix up rhel 7 rhui repo config file

Add rhel 7 rhui extras repo, which has docker in it

Separate rhel 7 extras into its own config file

Add rhel 7 extras so that we have docker

--- a/roles/repos/tasks/main.yaml
+++ b/roles/repos/tasks/main.yaml
@@ -3,8 +3,8 @@
 - name: Ensure rhel 7 libra candidate exists in yum.repos.d
   copy: src=rhel-7-libra-candidate.repo dest=/etc/yum.repos.d/rhel-7-libra-candidate.repo
 
-- name: Ensure a docker repo is laid down
-  copy: src=docker.repo dest=/etc/yum.repos.d/docker.repo
+- name: Ensure rhel 7 extras exists in yum.repos.d
+  copy: src=oso-rhui-rhel-7-extras.repo dest=/etc/yum.repos.d/oso-rhui-rhel-7-extras.repo
 
 - name: Ensure the kubernetes repo is available
   copy: src=epel7-kubernetes.repo dest=/etc/yum.repos.d/epel7-kubernetes.repo
